--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -171,7 +171,7 @@
             <i class=" icon"></i>
             To English
         </a>
-         <a href="http://home-library.s3-website-ap-southeast-1.amazonaws.com/" target="_blank" class="item">
+         <a href="http://library.poststudy.s3-website-ap-southeast-1.amazonaws.com/" target="_blank" class="item">
            <i class=" icon"></i>
          Love Book
          </a>
@@ -303,7 +303,7 @@
                 <!--alway show-->
                 <div class="ui section divider"></div>
                 <a href="https://ludwigz.herokuapp.com/" target="_blank" class="item">To English</a>
-                <a href="http://home-library.s3-website-ap-southeast-1.amazonaws.com/" target="_blank" class="item">Love Book</a>
+                <a href="http://library.poststudy.s3-website-ap-southeast-1.amazonaws.com/" target="_blank" class="item">Love Book</a>
 
 
                 <!--actions user group-->
