--- a/Views/Index/QuestionDetail.cshtml
+++ b/Views/Index/QuestionDetail.cshtml
@@ -63,7 +63,7 @@
                     </div>
                 }
                 <div class="right">
-                    <a href="/user/@posts.OwnerUserId"
+                    <a href="/users/@posts.OwnerUserId"
                        class="ui basic image label">
                         <img src="@posts?.UserAvatar">
                         @posts.UserDisplayName
@@ -99,7 +99,7 @@
                 {
                     <div class="item border-bottom padding-bottom-base">
                         <div class="full-width left padding-top-base user-info">
-                            <a href="/user/@item.OwnerUserId"
+                            <a href="/users/@item.OwnerUserId"
                                class="ui basic image label">
                                 <img src="@item?.UserAvatar">
                                 @item.UserDisplayName
