--- a/Views/Index/Search.cshtml
+++ b/Views/Index/Search.cshtml
@@ -90,7 +90,7 @@
                                             <p>@item.HeadContent<span>...</span></p>
                                         </div>
                                         <div class="container infor full-width no-padding padding-top-base left">
-                                            <a href="/user/@item.OwnerUserId"
+                                            <a href="/users/@item.OwnerUserId"
                                                class="ui basic image label">
                                                 <img src="@item?.UserAvatar">
                                                 @item.UserDisplayName
@@ -145,7 +145,7 @@
                                             <p>@item.HeadContent<span>...</span></p>
                                         </div>
                                         <div class="container infor full-width no-padding padding-top-base left">
-                                            <a href="/user/@item.OwnerUserId"
+                                            <a href="/users/@item.OwnerUserId"
                                                class="ui basic image label">
                                                 <img src="@item?.UserAvatar">
                                                 @item.UserDisplayName
@@ -200,7 +200,7 @@
                                             <p>@item.HeadContent<span>...</span></p>
                                         </div>
                                         <div class="container infor full-width no-padding padding-top-base left">
-                                            <a href="/user/@item.OwnerUserId"
+                                            <a href="/users/@item.OwnerUserId"
                                                class="ui basic image label">
                                                 <img src="@item?.UserAvatar">
                                                 @item.UserDisplayName
@@ -272,7 +272,7 @@
                         {
                             <div class="container full-width no-padding">
                                 <div class="col-lg-5 col-md-5 col-xs-5 col-sm-5 no-padding">
-                                    <a href="/user/@user.Id"
+                                    <a href="/users/@user.Id"
                                        class="ui basic image label">
                                         <img src="@user?.Avatar">
                                         @user?.DisplayName
