--- a/Views/Index/TutorialDetail.cshtml
+++ b/Views/Index/TutorialDetail.cshtml
@@ -46,7 +46,7 @@
                     }
                     <div class="info">
                         <div class="title center">
-                            <a href="/user/@posts?.OwnerUserId"
+                            <a href="/users/@posts?.OwnerUserId"
                                class="">
                                 @posts?.UserDisplayName
                             </a>
@@ -63,7 +63,7 @@
 
                     <div class="right">
                         <div class="title full-width">
-                            <a href="/user/@posts?.OwnerUserId"
+                            <a href="/users/@posts?.OwnerUserId"
                                class="link">
                                 @posts?.UserDisplayName
                             </a>
