--- a/Views/Index/Tutorials.cshtml
+++ b/Views/Index/Tutorials.cshtml
@@ -32,7 +32,7 @@
                             <div class="container no-padding content">
                                 <!--user create-->
                                 <div class="full-width padding-top-base head">
-                                    <a href="/user/@item.OwnerUserId"
+                                    <a href="/users/@item.OwnerUserId"
                                        class="ui basic image label">
                                         <img src="@item?.UserAvatar">
                                         @item.UserDisplayName
@@ -115,7 +115,7 @@
                         <div class="container no-padding content">
                             <!--user create-->
                             <div class="full-width padding-top-base head">
-                                <a href="/user/@item.OwnerUserId"
+                                <a href="/users/@item.OwnerUserId"
                                    class="ui basic image label">
                                     <img src="@item?.UserAvatar">
                                     @item.UserDisplayName
