add samplecode for editor

--- a/Views/User/Personal.cshtml
+++ b/Views/User/Personal.cshtml
@@ -187,7 +187,7 @@
                                         <p>@item.HeadContent<span>...</span></p>
                                     </div>
                                     <div class="container infor full-width no-padding left">
-                                        <a href="/user/@item.OwnerUserId"
+                                        <a href="/user/@user.Id"
                                            class="ui basic image label">
                                             <img src="@item?.UserAvatar">
                                             @item.UserDisplayName
