--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -262,7 +262,7 @@
 
                     <!--search-->
                     <div class="search-all ui item transparent icon input">
-                        <input class="search-field" autocomplete="off" placeholder="Tìm kiếm những câu hỏi, bài viết và nội dung học tập..." type="text">
+                        <input class="search-field" autocomplete="off" placeholder="Tìm kiếm theo từ khoá, bài viết, câu hỏi hay ai đó..." type="text">
                         <i class="ui icon search"></i>
                     </div>
 
