--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -435,15 +435,16 @@
 
 </div>
 
-<script>
-    var userId = @user?.Id;
-
-    $(document).ready(function () {
-        var makePostsNow = $('.make-posts-now');
-        makePostsNow.click(function (event) {
-            event.preventDefault();
-            window.location.href = "/posts/ask?u_i="+userId;
-        });
-    });
-
-</script>
+@if(user != null){
+    <script>
+        // User can posts now if logined
+            var userId = @user?.Id
+            $(document).ready(function () {
+                var makePostsNow = $('.make-posts-now');
+                makePostsNow.click(function (event) {
+                    event.preventDefault();
+                    window.location.href = "/posts/ask?u_i="+userId;
+                });
+            });
+    </script>
+}
