fix: choose image cover is a link reference or src

--- a/Views/Posts/PostsManager.cshtml
+++ b/Views/Posts/PostsManager.cshtml
@@ -152,7 +152,7 @@
                             <input type="file" onchange="uploadImg()" style="display: none" />
                             <div class='btn-load-cover-images'>
                                 <span class="header-text pointer">
-                                    <i class="icon fa-picture-o"></i>Tải ảnh bìa bài viết</span>
+                                    <i class="icon fa-picture-o"></i>Nhấn để duyệt ảnh từ bài viết, chọn 1 ảnh để làm ảnh bìa</span>
                             </div>
                             <div id="coverImgs" class="col-xs-12">
                                 <!-- <img src="" height="200" alt="ảnh bìa bài viết" /> -->
